# mp-lab6

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: CMake-CI.yml
gtest/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
interface/include/: MainForm.h  MainForm.resx  TableController.h
interface/src/: TableController.hpp  stub.cpp
polinom/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
polinom/include/: DatLink.h  DatList.h  DatValue.h  HeadRing.h  Monom.h  Polinom.h  RootLink.h
polinom/src/: CTestTestfile.cmake  DatList.hpp  HeadRing.hpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  polinom.vcxproj  polinom.vcxproj.filters
polinom/test/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  polinom_test.vcxproj  polinom_test.vcxproj.filters  test_polinom.cpp
postfix/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
postfix/include/: MyExpression.h
postfix/src/: CTestTestfile.cmake  MyExpression.cpp  Priority.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  postfix.vcxproj  postfix.vcxproj.filters
postfix/stack/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
postfix/test/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  postfix_test.vcxproj  postfix_test.vcxproj.filters  test_expression.cpp
table/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
table/AVLTreeTable/: CMakeLists.txt
table/ChainHashTable/: CMakeLists.txt
table/ChainHashTable/include/: ChainHashTable.h
table/ChainHashTable/src/: ChainHashTable.hpp
table/ChainHashTable/test/: test_ChainHashTable.cpp
table/HashTable/: CMakeLists.txt
table/ListTable/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
(+111 files in other folders)
